# LPMP

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
src/: CMakeLists.txt
src/asymmetric_multiway_cut/: CMakeLists.txt  asymmetric_multiway_cut_gaec.cpp  asymmetric_multiway_cut_gaec_text_input.cpp  asymmetric_multiway_cut_instance.cpp  asymmetric_multiway_cut_parser.cpp  asymmetric_multiway_cut_python_binding.cpp
src/bdd/: CMakeLists.txt  ILP_parser.cpp  bdd_anisotropic_diffusion_text_input.cpp  bdd_min_marginal_averaging_restricted_text_input.cpp  bdd_min_marginal_averaging_smoothed_text_input.cpp  bdd_min_marginal_averaging_text_input.cpp  bdd_projected_subgradient_text_input.cpp
src/cell-tracking/: CMakeLists.txt  cell_tracking_input.cpp  convert_cell_tracking_to_lp.cpp
src/cut_base/: CMakeLists.txt  cut_base_packing.cpp  lifted_factor.cpp
src/discrete_tomography/: CMakeLists.txt  convert_discrete_tomography_to_lp.cpp  discrete_tomography_input.cpp
src/graph_matching/: CMakeLists.txt  __init__.py  convert_qaplib_to_dd.py  convert_torresani_et_al_to_lp.cpp  evaluate_multigraph_matching.cpp  generate_graph_matching_solvers.py  generate_multigraph_matching_solvers.py  generate_solvers.py  graph_matching_frank_wolfe.cpp  graph_matching_frank_wolfe_koopmans_beckmann.cpp  graph_matching_frank_wolfe_koopmans_beckmann_text_input.cpp  graph_matching_frank_wolfe_sparse_text_input.cpp  graph_matching_fw.cpp  graph_matching_gm.cpp  graph_matching_gm_left.cpp  graph_matching_gm_left_tightening.cpp  graph_matching_gm_proximal_bundle.cpp  graph_matching_gm_proximal_bundle_left.cpp  graph_matching_gm_right.cpp  graph_matching_gm_right_tightening.cpp  graph_matching_gm_tightening.cpp  graph_matching_hungarian_bp.cpp  graph_matching_hungarian_bp_both_sides.cpp  graph_matching_hungarian_bp_both_sides_tightening.cpp  graph_matching_hungarian_bp_left.cpp  graph_matching_hungarian_bp_left_tightening.cpp  graph_matching_hungarian_bp_right.cpp  graph_matching_hungarian_bp_right_tightening.cpp  graph_matching_hungarian_bp_tightening.cpp  graph_matching_input.cpp  graph_matching_instance.cpp  graph_matching_koopmans_beckmann_input.cpp  graph_matching_local_subproblems_proximal_bundle_left.cpp  graph_matching_mcf_both_sides.cpp  graph_matching_mcf_both_sides_tightening.cpp  graph_matching_mcf_left.cpp  graph_matching_mcf_left_tightening.cpp.cpp  graph_matching_mcf_proximal_bundle.cpp  graph_matching_mcf_proximal_bundle_left.cpp  graph_matching_mcf_right.cpp  (+25 more)
src/horizon_tracking/: CMakeLists.txt  generate_solver.py  horizon_tracking_MST.cpp  horizon_tracking_conic_bundle.cpp  horizon_tracking_fwmap.cpp  horizon_tracking_fwmap_new.cpp  horizon_tracking_subgradient.cpp  horizon_tracking_uai_input.cpp
src/lifted_disjoint_paths/: CMakeLists.txt  ldp_batch_process.cxx  ldp_cut_factor.cxx  ldp_directed_graph.cxx  ldp_instance.cxx  ldp_interval_connection.cxx  ldp_path_factor.cxx  ldp_paths_extractor.cxx  ldp_python.cxx  ldp_two_layer_graph.cxx  lifted_disjoint_paths_input.cpp  lifted_disjoint_paths_text_input.cpp  solveFromFiles.py  solveFromFilesForIntervals.py  solveFromVectors.py  solveFromVectorsTwoGraphs.py  solveInBatches.py
src/max_cut/: CMakeLists.txt  convert_dimacs_graph_cut_max_flow_to_max_cut.cpp  convert_dimacs_qpbo_max_flow_to_max_cut.cpp  generate_solvers.py  max_cut_cycle_packing.cpp  max_cut_cycle_packing_text_input.cpp  max_cut_cycle_qpbo_uai_input.cpp  max_cut_cycle_text_input.cpp  max_cut_greedy_additive_edge_contraction.cpp  max_cut_greedy_additive_edge_contraction_text_input.cpp  max_cut_local_search.cpp  max_cut_odd_bicycle_wheel_packing.cpp  max_cut_odd_bicycle_wheel_packing_text_input.cpp  max_cut_odd_bicycle_wheel_qpbo_uai_input.cpp  max_cut_odd_bicycle_wheel_text_input.cpp  max_cut_sahni_gonzalez.cpp  max_cut_sahni_gonzalez_text_input.cpp  max_cut_text_input.cpp
src/mrf/: CMakeLists.txt  FWMAP_opengm.cpp  FWMAP_uai.cpp  conic_bundle_opengm.cpp  conic_bundle_uai.cpp  convert_dimacs_graph_cut_max_flow_to_mrf_uai.cpp  convert_dimacs_qpbo_max_flow_to_mrf_uai.cpp  convert_opengm_mrf_to_lp.cpp  convert_opengm_mrf_to_uai.cpp  convert_uai_mrf_to_lp.cpp  dimacs_max_flow_input.cpp  generate_solvers.py  mplp_opengm.cpp  mplp_uai.cpp  mrf_opengm_input.cpp  mrf_uai_input.cpp  pairwise_Potts_factor.cpp  pairwise_simplex_factor.cpp  qpbo_dimacs.cpp  qpbo_uai.cpp  srmp_opengm.cpp  srmp_opengm_combiLP.cpp  srmp_opengm_tightening.cpp  srmp_uai.cpp  srmp_uai_combiLP.cpp  srmp_uai_tightening.cpp  ternary_simplex_factor.cpp
src/multicut/: CMakeLists.txt  convert_andres_multicut_grid_graph_to_text.cpp  convert_andres_multicut_to_text.cpp  convert_multigraph_matching_to_multicut.cpp  convert_opengm_multicut_to_text.cpp  convert_simple_multicut_hdf5_to_text.cpp  correlation_clustering_instance.cpp  generate_solvers.py  lifted_multicut_h5.cpp  lifted_multicut_h5_grid.cpp  lifted_multicut_text.cpp  multicut_andres_input.cpp  multicut_balanced_edge_contraction.cpp  multicut_bec_text_input.cpp  multicut_cycle_andres_input.cpp  multicut_cycle_opengm_input.cpp  multicut_cycle_packing.cpp  multicut_cycle_packing_parallel.cpp  multicut_cycle_packing_text_input.cpp  multicut_cycle_packing_text_input_parallel.cpp  multicut_cycle_text_input.cpp  multicut_factors_messages.cpp  multicut_gaec_parallel_text_input.cpp  multicut_gaec_text_input.cpp  multicut_greedy_additive_edge_contraction.cpp  multicut_greedy_additive_edge_contraction_andres_input.cpp  multicut_greedy_additive_edge_contraction_parallel.cpp  multicut_greedy_edge_fixation.cpp  multicut_greedy_edge_fixation_text_input.cpp  (+27 more)
test/: CMakeLists.txt  generate_random_graph.hxx  graph_test.cpp  serialization.cpp  test_FWMAP.cpp  test_bfs_ordering.cpp  test_commutation_matrix.cpp  test_conic_bundle.cpp  test_cuthill_mckee.cpp  test_message.hxx  test_message_passing_schedule.cpp  test_model.cpp  test_model.hxx  test_polynomial_functions.cpp  test_reparametrization_recognition.cpp  test_three_dimensional_variable_array.cpp  test_topological_sort.cpp  test_two_dimensional_variable_array.cpp  test_weight_computation.cpp  vector.cpp
(+436 files in other folders)
