add_subdirectory(mrf)
add_subdirectory(graph_matching)
add_subdirectory(max_cut)
add_subdirectory(horizon_tracking)
add_subdirectory(multicut)
add_subdirectory(cut_base)
add_subdirectory(cell-tracking)
add_subdirectory(discrete_tomography)
add_subdirectory(multigraph_matching)
add_subdirectory(asymmetric_multiway_cut)
add_subdirectory(multiway_cut)
add_subdirectory(lifted_disjoint_paths)
