add_library(asymmetric_multiway_cut_instance asymmetric_multiway_cut_instance.cpp)
target_link_libraries(asymmetric_multiway_cut_instance LPMP)

add_library(asymmetric_multiway_cut_parser asymmetric_multiway_cut_parser.cpp)
target_link_libraries(asymmetric_multiway_cut_parser asymmetric_multiway_cut_instance LPMP)

add_library(asymmetric_multiway_cut_gaec asymmetric_multiway_cut_gaec.cpp)
target_link_libraries(asymmetric_multiway_cut_gaec asymmetric_multiway_cut_instance asymmetric_multiway_cut_parser asymmetric_multiway_cut_gaec LPMP)
