add_library(asymmetric_multiway_cut_instance asymmetric_multiway_cut_instance.cpp)
target_link_libraries(asymmetric_multiway_cut_instance LPMP)

add_library(asymmetric_multiway_cut_parser asymmetric_multiway_cut_parser.cpp)
target_link_libraries(asymmetric_multiway_cut_parser asymmetric_multiway_cut_instance LPMP)

add_library(asymmetric_multiway_cut_gaec asymmetric_multiway_cut_gaec.cpp)
target_link_libraries(asymmetric_multiway_cut_gaec asymmetric_multiway_cut_instance asymmetric_multiway_cut_parser LPMP)

add_executable(asymmetric_multiway_cut_gaec_text_input asymmetric_multiway_cut_gaec_text_input.cpp)
target_link_libraries(asymmetric_multiway_cut_gaec_text_input asymmetric_multiway_cut_instance asymmetric_multiway_cut_parser asymmetric_multiway_cut_gaec)

pybind11_add_module(asymmetric_multiway_cut_py asymmetric_multiway_cut_python_binding.cpp)
target_link_libraries(asymmetric_multiway_cut_py PRIVATE LPMP asymmetric_multiway_cut_instance asymmetric_multiway_cut_parser asymmetric_multiway_cut_gaec)
