add_subdirectory(eval)

add_library(ILP_parser ILP_parser.cpp)
target_link_libraries(ILP_parser LPMP)

add_executable(bdd_min_marginal_averaging_text_input bdd_min_marginal_averaging_text_input.cpp)
target_link_libraries(bdd_min_marginal_averaging_text_input ILP_parser Cudd LPMP)

add_executable(bdd_min_marginal_averaging_restricted_text_input bdd_min_marginal_averaging_restricted_text_input.cpp)
target_link_libraries(bdd_min_marginal_averaging_restricted_text_input ILP_parser Cudd LPMP)

add_executable(bdd_min_marginal_averaging_smoothed_text_input bdd_min_marginal_averaging_smoothed_text_input.cpp)
target_link_libraries(bdd_min_marginal_averaging_smoothed_text_input ILP_parser Cudd LPMP)

add_executable(bdd_anisotropic_diffusion_text_input bdd_anisotropic_diffusion_text_input.cpp)
target_link_libraries(bdd_anisotropic_diffusion_text_input ILP_parser Cudd LPMP)

#add_executable(bdd_lbfgs_text_input bdd_lbfgs_text_input.cpp)
#target_link_libraries(bdd_lbfgs_text_input ILP_parser Cudd LPMP)

add_executable(bdd_projected_subgradient_text_input bdd_projected_subgradient_text_input.cpp)
target_link_libraries(bdd_projected_subgradient_text_input ILP_parser Cudd LPMP)