add_executable(convert_dimacs_qpbo_max_flow_to_max_cut convert_dimacs_qpbo_max_flow_to_max_cut.cpp)
target_link_libraries(convert_dimacs_qpbo_max_flow_to_max_cut LPMP dimacs_max_flow_input)

add_executable(convert_dimacs_graph_cut_max_flow_to_max_cut convert_dimacs_graph_cut_max_flow_to_max_cut.cpp)
target_link_libraries(convert_dimacs_graph_cut_max_flow_to_max_cut LPMP dimacs_max_flow_input)
